--- a/themes/yelee/layout/_partial/article.ejs
+++ b/themes/yelee/layout/_partial/article.ejs
@@ -79,6 +79,8 @@
         <%- partial('comments/disqus', {
             shortname: config.disqus_shortname
           }) %>
+    <% } else if (theme.gitment.on) { %>
+      <%- partial('comments/gitment') %>
     <% } %>
 <% } %>
 
