添加gitalk评论系统

--- a/themes/yelee/layout/_partial/article.ejs
+++ b/themes/yelee/layout/_partial/article.ejs
@@ -81,6 +81,8 @@
           }) %>
     <% } else if (theme.gitment.on) { %>
       <%- partial('comments/gitment') %>
+    <% } else if (theme.gitalk.on) { %>
+      <%- partial('comments/gitalk') %>
     <% } %>
 <% } %>
 
