--- a/themes/yelee/layout/_partial/comments/gitment.ejs
+++ b/themes/yelee/layout/_partial/comments/gitment.ejs
@@ -6,7 +6,7 @@
     <script>
         var loadComment = function(){
             var gitment = new Gitment({
-                id: "<%=url%>",
+                id: window.location.pathname,
                 owner: '<%=theme.gitment.github_id%>',
                 repo: '<%=theme.gitment.repo%>',
                 oauth: {
