修复gitalk评论系统问题

--- a/themes/yelee/layout/_partial/comments/gitalk.ejs
+++ b/themes/yelee/layout/_partial/comments/gitalk.ejs
@@ -10,6 +10,7 @@
                 clientSecret: '<%= theme.gitalk.clientSecret %>',
                 repo: '<%= theme.gitalk.repo %>',
                 id: window.location.pathname,
+                admin: '<%= theme.gitalk.admin %>',
                 owner: '<%= theme.gitalk.owner %>',
                 distractionFreeMode: '<%= theme.gitalk.distractionFreeMode %>',
             })
