--- a/themes/yelee/layout/_partial/head.ejs
+++ b/themes/yelee/layout/_partial/head.ejs
@@ -21,9 +21,8 @@
 
 <link rel="apple-touch-icon" href= "<%- theme.root_url %>/apple-touch-icon.png">
 
-<script src="http://jslibs.wuxubj.cn/sweetalert_mini/jquery-1.7.1.min.js"></script>
-<script src="http://jslibs.wuxubj.cn/sweetalert_mini/sweetalert.min.js"></script>
-<link rel="stylesheet" type="text/css" href="http://jslibs.wuxubj.cn/sweetalert_mini/sweetalert.mini.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.0.3/sweetalert2.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.0.3/sweetalert2.all.min.js"></script>
 <% if (theme.rss){ %>
     <link rel="alternate" href="<%- theme.rss %>" title="<%= config.title %>" type="application/atom+xml">
 <% } %>
