--- a/themes/yelee/layout/_partial/post/nav.ejs
+++ b/themes/yelee/layout/_partial/post/nav.ejs
@@ -18,7 +18,8 @@
                     $(".fa-clipboard").click(function(){
                         swal({   
                         title: "",   
-                        text: '复制成功',   
+                        text: '复制成功',  
+                        type: 'success',
                         html: false,
                         timer: 1000,   
                         showConfirmButton: false
