统计百度统计与头像优化

--- a/themes/yelee/layout/_partial/head.ejs
+++ b/themes/yelee/layout/_partial/head.ejs
@@ -100,7 +100,7 @@ if ( is_archive() ) {
 <% } %>
 
 <% if (theme.share.on && theme.share.addthis){ %>
-    <script src="//s7.addthis.com/js/300/addthis_widget.js#pubid=<%-theme.share.addthis_pubid%>"></script>
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a1d3f6b51787bfe"></script> 
 <% } %>
 
 <% if (theme.baidu_tongji){ %>
