--- a/themes/yelee/layout/_partial/post/share.ejs
+++ b/themes/yelee/layout/_partial/post/share.ejs
@@ -17,7 +17,7 @@
     <% } %>
 
     <% if (theme.share.addthis) { %>
-        <div class="addthis_sharing_toolbox"></div>
+        <div class="addthis_inline_share_toolbox"></div>
     <% } %>
 </div>
 
