--- a/themes/yelee/source/css/_partial/main.styl
+++ b/themes/yelee/source/css/_partial/main.styl
@@ -7,7 +7,6 @@
             height: 110px;
             position: absolute;
             width: 100%;
-            background: #4d4d4d;
             &.fixed{
                 position: fixed;
                 height: 42px;
@@ -93,14 +92,13 @@
     .profilepic{
         text-align: center;
         display: block;
-        border: 5px solid #fff;
+        border: 1px solid #fff;
         border-radius: 50%;
         width: 128 + base-font-size - 16;
         height: @width;
         margin: 0 auto;
         position: relative;
         overflow: hidden;
-        background: #88acdb;
         -webkit-box-orient: horizontal;
         -webkit-box-pack: center;
         -webkit-box-align: center;
@@ -115,20 +113,25 @@
             -webkit-animation-delay: .3s;
         }
         &:hover {
-            background: white;
-            border: 5px solid #88acdb;
-            box-shadow: 0 0 1.5em #88acdb;
-            animation: profilepic .15s linear infinite alternate;
-            -webkit-animation: profilepic .15s linear infinite alternate; 
+            background: pink;
+            border: 1px solid white;
+            box-shadow: 0 0 2em red;
+            animation: profilepic .2s linear infinite alternate;
+            -webkit-animation: profilepic .2s linear infinite alternate; 
         }
         @keyframes profilepic {
             0% {
-                right: 4px;
-                top: 1x;
+                left: -3px;
+                top: 0x;
+            }
+            50% {
+                left: 0px;
+                top: 0x;
+                transform: rotate(15deg);
             }
             100% {
-                right: 0px;
-                top: -1px;
+                left: 3px;
+                top: 0px;
             }
         }
     }
