--- a/themes/yelee/layout/_partial/post/date.ejs
+++ b/themes/yelee/layout/_partial/post/date.ejs
@@ -1,5 +1,5 @@
 <a href="<%- url_for(post.path) %>" class="<%= class_name %>">
-      <time datetime="<%= date_xml(post.date) %>" itemprop="datePublished"><%= date(post.date, date_format)%> <font size="2.5"><%= moment(post.date).locale('zh-cn').fromNow()%></font></time>
+      <time datetime="<%= date_xml(post.date) %>" itemprop="datePublished"><%= date(post.date, date_format)%></time>
 </a>
 <% if ((is_home() || (is_post() && !theme.preload_comment)) && theme.show_count && (theme.disqus.on || theme.duoshuo.on || theme.youyan.on || config.disqus_shortname)) { %> 
     <a href="<%- url_for(post.path) %>#comments" title="<%= __('tooltip.jump2comments') %>">
