--- a/themes/yelee/source/css/_partial/main.styl
+++ b/themes/yelee/source/css/_partial/main.styl
@@ -44,7 +44,7 @@
         overflow-y: auto;
         .overlay{
             width: 100%;
-            height: 180px;
+            height: 150px;
             background-color: black;
             position: absolute;
             opacity: 0.7;
@@ -52,7 +52,7 @@
         .intrude-less {
             width: 76%;
             text-align: center;
-            margin: 112px auto 0;
+            margin: 110px auto 0;
         }
         li:hover {
             background: none;
@@ -91,9 +91,9 @@
     }
     .profilepic{
         text-align: center;
-        display: block;
-        border: 1px solid #fff;
-        border-radius: 50%;
+        // display: block;
+        // border: 1px solid #fff;
+        // border-radius: 50%;
         width: 128 + base-font-size - 16;
         height: @width;
         margin: 0 auto;
@@ -111,11 +111,11 @@
             -webkit-animation-delay: .3s;
         }
         &:hover {
-            background: pink;
-            border: 1px solid white;
-            box-shadow: 0 0 2em red;
-            animation: profilepic .2s linear infinite alternate;
-            -webkit-animation: profilepic .2s linear infinite alternate; 
+            // background: pink;
+            // border: 1px solid white;
+            // box-shadow: 0 0 2em red;
+            animation: profilepic .1s linear infinite alternate;
+            -webkit-animation: profilepic .1s linear infinite alternate; 
         }
         @keyframes profilepic {
             0% {
@@ -125,7 +125,7 @@
             50% {
                 left: 0px;
                 top: 0x;
-                transform: rotate(15deg);
+                transform: rotate(10deg);
             }
             100% {
                 left: 3px;
