--- a/themes/yelee/layout/_partial/archive.ejs
+++ b/themes/yelee/layout/_partial/archive.ejs
@@ -5,8 +5,8 @@
   <% if (page.total > 1){ %>
     <nav id="page-nav">
       <%- paginator({
-        prev_text: '&laquo; Prev',
-        next_text: 'Next &raquo;'
+        prev_text: '&laquo; ' + __('tooltip.prePage'),
+        next_text: __('tooltip.nextPage') + ' &raquo;'
       }) %>
     </nav>
   <% } %>
@@ -34,8 +34,8 @@
     <% if (page.total > 1){ %>
     <nav id="page-nav">
       <%- paginator({
-        prev_text: '&laquo; Prev',
-        next_text: 'Next &raquo;'
+        prev_text: '&laquo; ' + __('tooltip.prePage'),
+        next_text: __('tooltip.nextPage') + ' &raquo;'
       }) %>
     </nav>
   <% } %>
