--- a/themes/yelee/layout/_partial/head.ejs
+++ b/themes/yelee/layout/_partial/head.ejs
@@ -81,7 +81,9 @@ if ( is_archive() ) {
         isCategory: <%=is_category()%>,
         fancybox_js: "<%- theme.CDN.fancybox_js %>",
         scrollreveal: "<%- theme.CDN.scrollreveal %>",
-        search: <%= theme.search.on %>
+        search: <%= theme.search.on %>,
+        offline: <%=theme.qiniu.offline%>,
+        urlPrefix: "<%=theme.qiniu.urlPrefix%>"
     }
 </script>
 
