feat: add OS principle

--- a/themes/yelee/source/css/_partial/main.styl
+++ b/themes/yelee/source/css/_partial/main.styl
@@ -70,9 +70,10 @@
         width: auto;
     }
 
-    @media screen and (max-width:1040px) {
+    // @media screen and (max-width:1040px) {
         
-    }@media screen and (max-width:800px) {
+    // }
+    @media screen and (max-width:1040px) {
         @import "_partial/mobile"
     }
 }
