--- a/themes/yelee/source/css/_partial/mobile.styl
+++ b/themes/yelee/source/css/_partial/mobile.styl
@@ -212,10 +212,10 @@
     background: rgba(255, 255, 255, .7);
     font-size: 1em;
     font-weight: bold;
-    color: gray;
+    color: #258fb8;
     &:hover {
         color: #88acdb;
-        font-size: 1em;
+        font-size: 1.1em;
     }
 }
 
@@ -224,10 +224,10 @@
     z-index: 99
     left: 0;
     top: 38%;
-    bottom: 1em;
+    bottom: 3em;
     height: auto;
     max-height: 58%;
-    width: none;
+    // width: none;
     width: auto;
     min-width: 7em;
     max-width: 61.8%;
@@ -241,10 +241,10 @@
     line-height: 1.25em;
     .toc-title {
         display: none;
-        padding: .3em;
-        color: white;
+        padding: .6em;
+        color: #258fb8;
         background: lightgray;
-        border-radius 3px
+        border-radius 5px;
     }
     .toc {
         padding: 0.5em;
