--- a/themes/yelee/source/css/_partial/toc.styl
+++ b/themes/yelee/source/css/_partial/toc.styl
@@ -1,11 +1,11 @@
 #tocButton 
     position fixed
-    left left-col-width - 80px
+    left left-col-width - 100px
     top toc-top + 7
     font-size .9em
     font-weight bold
     font-family inherit
-    color lightgray
+    color: #258fb8
     cursor pointer
     background none
     border none
@@ -30,7 +30,7 @@
     line-height 1.65em
     .toc-title 
         font-weight bold
-        color gray
+        color: #258fb8
         &.clickable 
             cursor pointer
             &:hover 
