--- a/themes/yelee/source/css/_partial/main.styl
+++ b/themes/yelee/source/css/_partial/main.styl
@@ -37,6 +37,7 @@
         }
     }
     .left-col {
+        box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
         background: left-col-color;
         width: left-col-width;
         position:fixed;
@@ -251,24 +252,23 @@
     top: 61.8%;
     text-align: center;
     line-height: 42px;
+    background: rgba(215, 216, 215, .4);
+    box-shadow: 0px 0px 3px rgba(0,0,0,0.2);    
     a {
         display: block;
         width: 29px;
         height: 42px;
         font-size: 28px;
-        background: rgba(215, 216, 215, .4);
         // .fa {
         //     color: rgba(255, 255, 255, .8);
         // }
         &:hover {
             background: rgba(147, 181, 224, .3) !important; 
+            box-shadow: 0px 0px 10px rgba(0,0,0,0.4);    
             .fa {
                 color: white;
             }
         }
-    }
-    a:not(:last-child) {
-        border-bottom: 1px solid white;
     }
 }
 
