feat: optimize image and js loading speed

--- a/themes/yelee/layout/_partial/article.ejs
+++ b/themes/yelee/layout/_partial/article.ejs
@@ -94,4 +94,7 @@
             yiliaConfig.fancybox = false;
         <% } %>
     </script>
+    <% if (theme.mathjax && post.mathjax){ %>
+      <%- partial('mathjax') %>
+    <% } %>
 <% } %>
