--- a/themes/yelee/layout/_partial/comments/gitalk.ejs
+++ b/themes/yelee/layout/_partial/comments/gitalk.ejs
@@ -1,7 +1,7 @@
 <section class="gittalk" id="comments">
     <div id="gitalk-container"></div>
-    <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
-    <script src="//unpkg.com/gitalk/dist/gitalk.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.bootcss.com/gitalk/1.2.2/gitalk.min.css">
+    <script src="https://cdn.bootcss.com/gitalk/1.2.2/gitalk.min.js"></script>
     <script>
         var loadComment = function(){
             var gitalk = new Gitalk({
