--- a/themes/yelee/layout/_partial/mathjax.ejs
+++ b/themes/yelee/layout/_partial/mathjax.ejs
@@ -15,5 +15,5 @@ MathJax.Hub.Queue(function() {
 });
 </script>
 
-<script src="<%- theme.CDN.mathjax %>?config=TeX-AMS-MML_HTMLorMML">
+<script defer src="<%- theme.CDN.mathjax %>?config=TeX-AMS-MML_HTMLorMML">
 </script>
