feat: fix TAG button and add front end interview html part

--- a/themes/yelee/source/css/_partial/main.styl
+++ b/themes/yelee/source/css/_partial/main.styl
@@ -274,9 +274,8 @@
 
 .hide-labels {
     position: fixed;
-    left: left-col-width + 78px;
-    top: 30px;
-    padding: 1px;
+    left left-col-width + 20px
+    top 20px
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -284,13 +283,11 @@
     font-family: inherit;
     font-size: .9em;
     font-weight: bold;
-    color: #666;
+    color: #258fb8
     background: none;
-    opacity: .32;
     -webkit-appearance: none;
     &:hover {
         color: #88acdb;
-        opacity: 1; 
     }
 }
 
