--- a/themes/yelee/source/css/_partial/mobile.styl
+++ b/themes/yelee/source/css/_partial/mobile.styl
@@ -204,7 +204,7 @@
     margin-top: 1em;
 }
 
-#tocButton {
+#tocButton , .hide-labels{
     z-index: 100;
     position: fixed;
     left: .5em;
@@ -281,21 +281,6 @@ if toc-nowrap
     li {
         font-size: 1.7em;
     }
-}
-
-.hide-labels {
-    z-index: 100;
-    position: fixed;
-    left: .5em;
-    top: auto; 
-    bottom: 10px;
-    padding: .2em .4em;
-    // border-radius: 6px;
-    border-style : outset;
-    opacity: .9;
-    background: rgba(255, 255, 255, .8);
-    font-weight: bold;
-    color: gray;
 }
 
 #post-nav-button {
