--- a/themes/yelee/source/css/_partial/toc.styl
+++ b/themes/yelee/source/css/_partial/toc.styl
@@ -9,7 +9,7 @@
     cursor pointer
     background none
     border none
-    outline none
+    outline none    
     -webkit-appearance none
     &:hover 
         color: #88acdb
@@ -22,7 +22,7 @@
     left 0
     margin-left 0
     padding 6px 10px 10px 50 - (base-font-size - 16)*2
-    border-radius 2.8%
+    // border-radius 2.8%
     overflow auto
 
 #toc 
