--- a/themes/yelee/source/css/_partial/mobile.styl
+++ b/themes/yelee/source/css/_partial/mobile.styl
@@ -99,7 +99,7 @@
 }
 
 .article-inner {
-  padding: 12px;
+  padding: 1.5em;
 }
 
 .archive-article-inner .article-meta {
@@ -127,6 +127,8 @@
 .duoshuo {
     padding: 0 13px;
 }
+.gittalk
+    padding (10/16)em;
 #disqus_thread {
     padding: 0 13px;
 }
@@ -277,7 +279,8 @@ if toc-nowrap
 }
 
 .scroll {
-    right: 1.2em;
+    right: (10/16)em;
+    top: 70%;
     li {
         font-size: 1.7em;
     }
