feat: add gitlab shell and front end css html

--- a/themes/yelee/source/css/_partial/main.styl
+++ b/themes/yelee/source/css/_partial/main.styl
@@ -277,7 +277,7 @@
     left left-col-width + 20px
     top 20px
     border: none;
-    border-radius: 5px;
+    // border-radius: 5px;
     cursor: pointer;
     outline: none;
     font-family: inherit;
