feat: fix encrypt style and uglify es6

--- a/themes/yelee/layout/_partial/open-in-new-tab.ejs
+++ b/themes/yelee/layout/_partial/open-in-new-tab.ejs
@@ -19,7 +19,7 @@
         }
     <% } else if (global === 1) { %>
         $("a").attr("target", "_blank");
-        $("#scroll a, #toc a").removeAttr("target");
+        $("#scroll a, #toc-div a").removeAttr("target");
     <% } else if (global === 2) { %>
         $("a[target=_blank]").removeAttr("target");
     <% } %>
