--- a/themes/yelee/layout/_partial/head.ejs
+++ b/themes/yelee/layout/_partial/head.ejs
@@ -4,9 +4,13 @@
 <%- partial('ie-updater') %>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+<meta name="renderer" content="webkit">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="format-detection" content="telephone=no" />
+<meta content="email=no" name="format-detection" />
 <meta name="author" content="<%= config.author %>" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta http-equiv="Cache-Control" content="no-siteapp">
 
 <% if (is_home()){ %>
     <% if (theme.baidu_site) { %> 
