--- a/themes/yelee/layout/_partial/footer.ejs
+++ b/themes/yelee/layout/_partial/footer.ejs
@@ -13,27 +13,27 @@
         <% if (theme.visit_counter.on) { %>
             <div class="visit">
                 <% if (theme.visit_counter.site_visit) { %>
-                    <span id="busuanzi_container_site_pv" style='display:none'>
+                    <span id="busuanzi_container_site_pv" style='display:none;margin-right:10px;'>
                         <span id="site-visit" title="<%= __('visit_counter.site') %>"><i class="fa fa-user" aria-hidden="true"></i><%= __('visit_counter.site') %>：<span id="busuanzi_value_site_uv"></span>
                         </span>
                     </span>
                 <% } %>
-                <% if (theme.visit_counter.site_visit && theme.visit_counter.page_visit) { %>
-                    <span>| </span>
-                <% } %>
                 <% if (theme.visit_counter.page_visit) { %>
-                    <span id="busuanzi_container_page_pv" style='display:none'>
+                    <span id="busuanzi_container_page_pv" style='display:none;margin-right:10px;'>
                         <span id="page-visit"  title="<%= __('visit_counter.page') %>"><i class="fa fa-eye animated infinite pulse" aria-hidden="true"></i><%= __('visit_counter.page') %>:<span id="busuanzi_value_page_pv"></span>
                         </span>
                     </span>
                 <% } %>
-                <% if (theme.visit_counter.page_visit && theme.visit_counter.site_word) { %>
-                    <span>| </span>
-                <% } %>
                 <% if (theme.visit_counter.site_word) { %>
-                    <span title="<%= __('visit_counter.total_word_count') %>">
+                    <span title="<%= __('visit_counter.total_word_count') %>" style='margin-right:10px;'>
                         <i class="fa fa-pencil animated infinite pulse" aria-hidden="true"></i>
                         <%= __('visit_counter.total_word_count') %>：<%= totalcount(site) %>
+                    </span>
+                <% } %>
+                <% if (theme.visit_counter.post_length) { %>
+                    <span title="<%= __('visit_counter.total_post_length') %>" style='margin-right:10px;'>
+                        <i class="fa fa-pencil animated infinite pulse" aria-hidden="true"></i>
+                        <%= __('visit_counter.total_post_length') %>：<%= site.posts.length %>
                     </span>
                 <% } %>
             </div>
