feat: update blog log and add code paste

--- a/themes/yelee/layout/_partial/after-footer.ejs
+++ b/themes/yelee/layout/_partial/after-footer.ejs
@@ -1,6 +1,7 @@
 <% if (theme.github_widget){ %>
     <%- js('js/GithubRepoWidget') %>
 <% } %>
+<%- js('js/copy') %>
 <%- partial('_partial/background') %>
 <%- partial('comments/count-comment') %>
 <%- partial('google-analytics') %>
