--- a/themes/yelee/source/css/_partial/mobile.styl
+++ b/themes/yelee/source/css/_partial/mobile.styl
@@ -226,11 +226,12 @@
 
 .toc-article {
     display: block;
-    z-index: 99
+    z-index: 99;
     left: .5em;
-    top: 38%;
-    bottom: 2.5em;
-    height: auto;
+    // top: 38%;
+    top auto;
+    bottom: 2.7em;
+    // height: auto;
     max-height: 58%;
     // width: none;
     width: auto;
