feat: change avatar and fix copy code

--- a/themes/yelee/layout/_partial/footer.ejs
+++ b/themes/yelee/layout/_partial/footer.ejs
@@ -32,7 +32,7 @@
                 <% } %>
                 <% if (theme.visit_counter.post_length) { %>
                     <span title="<%= __('visit_counter.total_post_length') %>" style='margin-right:10px;'>
-                        <i class="fa fa-pencil animated infinite pulse" aria-hidden="true"></i>
+                        <i class="fa fa-folder animated infinite pulse" aria-hidden="true"></i>
                         <%= __('visit_counter.total_post_length') %>：<%= site.posts.length %>
                     </span>
                 <% } %>
