--- a/themes/yelee/source/css/_partial/main.styl
+++ b/themes/yelee/source/css/_partial/main.styl
@@ -4,7 +4,7 @@
     #mobile-nav{
         display: none;
         .overlay{
-            height: 110px;
+            height: 100 + base-font-size - 16;
             position: absolute;
             width: 100%;
             &.fixed{
@@ -14,12 +14,11 @@
             }
         }
         #header{
-            padding: 20px 0 0 0;
+            // padding: 20px 0;
             .profilepic{
                 display: block;
                 position: relative;
-                width: 100 + base-font-size - 16;
-                max-height: @width;
+                height: 100 + base-font-size - 16;
                 z-index: 100;
             }
             .header-menu{
@@ -86,7 +85,7 @@
     transition: 0.3s;
 }
 #header{
-    width:100%;
+    width: 100%;
     a {
         color: #696969;
         &:hover {
@@ -99,7 +98,7 @@
         // border: 1px solid #fff;
         // border-radius: 50%;
         // width: 128 + base-font-size - 16;
-        // height: @width;
+        height: 250 + base-font-size;
         margin: 0 auto;
         position: relative;
         overflow: hidden;
@@ -109,7 +108,8 @@
         text-align: center;
         filter: grayscale(100%);
         img{
-            width: 100%;
+            max-width: 100%;
+            max-height: 100%;
             animation-duration: .4s;
             animation-delay: .3s;
             -webkit-animation-duration: .4s;
