feat: add live2d avatar and fix mobile slider

--- a/themes/yelee/layout/_partial/after-footer.ejs
+++ b/themes/yelee/layout/_partial/after-footer.ejs
@@ -12,3 +12,8 @@
 <%- partial('tab-title-change') %>
 <script defer data-main="<%-config.root%>js/main.js" src="<%- theme.CDN.require %>"></script>
 <script async src="https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+
+<%- js('assets/waifu-tips') %>
+<%- js('assets/live2d') %>
+
+<script type="text/javascript">initModel("/assets/")</script>
