--- a/themes/yelee/layout/_partial/head.ejs
+++ b/themes/yelee/layout/_partial/head.ejs
@@ -25,6 +25,9 @@
 
 <link href="<%- theme.CDN.fontawesome %>" rel="stylesheet">
 <link rel="apple-touch-icon" href= "<%- theme.root_url %>/apple-touch-icon.png">
+
+<%- css('assets/waifu.css') %>
+
 <link rel="stylesheet" href="https://cdn.bootcss.com/limonte-sweetalert2/7.18.0/sweetalert2.min.css">
 
 <% if (theme.rss){ %>
