feat: change mobile slider

--- a/themes/yelee/layout/_partial/after-footer.ejs
+++ b/themes/yelee/layout/_partial/after-footer.ejs
@@ -12,7 +12,7 @@
 <%- partial('tab-title-change') %>
 <script defer data-main="<%-config.root%>js/main.js" src="<%- theme.CDN.require %>"></script>
 <script async src="https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-
+<script src="https://cdn.bootcss.com/slideout/1.0.1/slideout.min.js"></script>
 <%- js('assets/waifu-tips') %>
 <%- js('assets/live2d') %>
 
