--- a/themes/yelee/source/css/_partial/mobile-slider.styl
+++ b/themes/yelee/source/css/_partial/mobile-slider.styl
@@ -1,29 +1,60 @@
-#viewer{
-    position: fixed;
-    z-index: 1000000;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    overflow: hidden;
+body {
+  width: 100%;
+  height: 100%;
 }
+
+.slideout-menu {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  min-height: 100vh;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+  background-color: #333; /* A background-color is required */
+  z-index: 0;
+  display: none;
+}
+
+.slideout-menu-left {
+  left: 0;
+}
+
+.slideout-menu-right {
+  right: 0;
+}
+
+.slideout-panel {
+  position: relative;
+  z-index: 1;
+  will-change: transform;
+  min-height: 100vh;
+}
+
+.slideout-open,
+.slideout-open body,
+.slideout-open .slideout-panel {
+  overflow: hidden;
+}
+
+.slideout-open .slideout-menu {
+  display: block;
+}
+
+
 #viewer-box{
     display: flex;
     width: 100%;
-    height: 100%;
     position: relative;
     color: #ccc;
-    -webkit-transform: translate3d(-100%, 0, 0 );
-    -webkit-transition: -webkit-transform .25s ease-in-out;
     .viewer-box-l{
-        background: rgba(20,20,20,0.9);
-        width: 80%;
+        width: 300px;
         height: auto;
         flex-grow: 0;
         min-width: 8em;
-        max-width: 23em;
+        // max-width: 23em;
         .viewer-box-wrap{
-            margin: 20px 10px 0px 20px;
+            margin: 20px;
         }
         .viewer-title{
             line-height: 32px;
@@ -51,28 +82,4 @@
             }
         }
     }
-    .viewer-box-r{
-        flex-grow: 1
-        width: auto
-        height: auto
-        background: rgba(0,0,0,0)
-        &:hover {
-            cursor: w-resize
-        }
-    }
-}
-#viewer-box.anm-swipe{
-    -webkit-transform:  translate3d(0, 0, 0);
-    .viewer-box-r{
-        background: rgba(0,0,0,0);
-    }
-}
-.hide{
-    display: none;
-}
-#viewer-box .viewer-list{
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    overflow: hidden;
 }
