feat: fix slider bug

--- a/themes/yelee/source/css/_partial/article.styl
+++ b/themes/yelee/source/css/_partial/article.styl
@@ -301,11 +301,11 @@
     height: 2.5em;
     margin: 1em auto;
     font-size 1rem
-    background: rgba(158, 188, 226, i-opacity);
+    background: rgba(158, 188, 226, 1);
     box-shadow: 5px 5px 3px rgba(0,0,0,0.1);    
     &:hover {
-        box-shadow: 5px 5px 10px rgba(0,0,0,0.2);    
-        background: #93b5e0;
+        box-shadow: 5px 5px 10px rgba(0,0,0,0.2);  
+        background: #93b5ff;
     }
 }
 
