--- a/themes/yelee/source/css/_partial/mobile.styl
+++ b/themes/yelee/source/css/_partial/mobile.styl
@@ -40,7 +40,7 @@
             background: #444;
         }
         &:before{
-            color: #ddd;
+            color: #fff;
             content: "\f00b";
             font: 16px FontAwesome;
             width: 16px;
