--- a/themes/yelee/layout/_partial/mobile-nav.ejs
+++ b/themes/yelee/layout/_partial/mobile-nav.ejs
@@ -1,7 +1,7 @@
 <nav id="mobile-nav">
       <div class="overlay">
           <div class="slider-trigger"></div>
-          <h1 class="header-author js-mobile-header hide"><a href="/" title="回到主页"><%=theme.author%></a></h1>
+          <h1 class="js-mobile-header header-author hide"><a href="/" title="回到主页"><%=theme.author%></a></h1>
       </div>
     <div class="intrude-less">
         <header id="header" class="inner">
