--- a/themes/yelee/source/css/_partial/mobile-slider.styl
+++ b/themes/yelee/source/css/_partial/mobile-slider.styl
@@ -1,8 +1,3 @@
-body {
-  width: 100%;
-  height: 100%;
-}
-
 .slideout-menu {
   position: fixed;
   top: 0;
@@ -12,7 +7,7 @@ body {
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
   background-color: #333; /* A background-color is required */
-  z-index: 0;
+  z-index: 2;
   display: none;
 }
 
@@ -25,10 +20,10 @@ body {
 }
 
 .slideout-panel {
-  position: relative;
-  z-index: 1;
-  will-change: transform;
-  min-height: 100vh;
+    position: relative;
+    z-index: 3;
+//   will-change: transform;
+    min-height: 100vh;
 }
 
 .slideout-open,
@@ -41,6 +36,21 @@ body {
   display: block;
 }
 
+.mid-col:before {
+  content: '';
+  display: block;
+  background-color: rgba(0,0,0,0);
+  transition: background-color 0.5s ease-in-out;
+}
+
+.mid-col-open:before {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(0,0,0,.5);
+  z-index: 4;
+}
 
 #viewer-box{
     display: flex;
@@ -48,7 +58,7 @@ body {
     position: relative;
     color: #ccc;
     .viewer-box-l{
-        width: 300px;
+        width: 250px;
         height: auto;
         flex-grow: 0;
         min-width: 8em;
