--- a/themes/yelee/source/css/_partial/mobile.styl
+++ b/themes/yelee/source/css/_partial/mobile.styl
@@ -207,7 +207,7 @@
 }
 
 #tocButton , .hide-labels{
-    z-index: 100;
+    // z-index: 100;
     position: fixed;
     left: .5em;
     top: auto; /*In order to cover style in article.styl*/
