feat: add mvvm and tx interview

--- a/themes/yelee/layout/_partial/post/nav.ejs
+++ b/themes/yelee/layout/_partial/post/nav.ejs
@@ -10,7 +10,12 @@
         <p><span><%= __('copyright_info.date') %>:</span><%= post.date.format("YYYY-MM-DD, HH:mm:ss") %></p>
         <p><span><%= __('copyright_info.updated') %>:</span><%= post.updated.format("YYYY-MM-DD, HH:mm:ss") %></p>
         <p>
-            <span><%= __('copyright_info.url') %>:</span><a class="post-url" href="<%- url_for(post.path) %>" title="<%= post.title %>"><%= post.permalink %></a>
+            <span><%= __('copyright_info.url') %>:</span>
+            <% if (post.original){ %>
+                <a class="post-url" href="<%= post.original %>" title="<%= post.title %>"><%= post.original %></a>
+            <% }else{%>
+                <a class="post-url" href="<%- url_for(post.path) %>" title="<%= post.title %>"><%= post.permalink %></a>
+            <%}%>
             <span class="copy-path" data-clipboard-text="<%= __('copyright_info.from') %> <%= post.permalink %>　　<%= __('copyright_info.by') %> <%=theme.author%>" title="<%= __('tooltip.copyPath') %>"><i class="fa fa-clipboard"></i></span>
             <script> 
                 $(document).ready(function(){ 
