--- a/themes/yelee/source/css/style.styl
+++ b/themes/yelee/source/css/style.styl
@@ -23,7 +23,7 @@ html
   font-size base-font-size
 
 body
-  font-family: font-sans, font-chs, sans-serif;
+  font-family: "Arial","Microsoft YaHei","黑体","宋体",sans-serif;
   background: #fff;
   text-rendering: optimizeLegibility;
   -moz-osx-font-smoothing: grayscale;
