--- a/themes/yelee/layout/_partial/background.ejs
+++ b/themes/yelee/layout/_partial/background.ejs
@@ -1,6 +1,6 @@
 <% if (theme.background_image){ %>
     <script>
-        $(document).ready(function() {
+        var changeBackground = function(){
             var iPad = window.navigator.userAgent.indexOf('iPad');
             if (iPad > -1 || $(".left-col").css("display") === "none") {
                 var bgColorList = ["#9db3f4", "#414141", "#e5a859", "#f5dfc6", "#c084a0", "#847e72", "#cd8390", "#996731"];
@@ -8,10 +8,16 @@
                 $("body").css({"background-color": bgColorList[bgColor], "background-size": "cover"});
             }
             else {
-                var backgroundnum = <%= theme.background_image %>;
-                var backgroundimg = "url(<%- theme.root_url %>/background/bg-x.jpg)".replace(/x/gi, Math.ceil(Math.random() * backgroundnum));
-                $("body").css({"background": backgroundimg, "background-attachment": "fixed", "background-size": "cover"});
+                // var backgroundnum = <%= theme.background_image %>;
+                // var backgroundimg = "url(<%- theme.root_url %>/background/bg-x.jpg)".replace(/x/gi, Math.ceil(Math.random() * backgroundnum));
+                $("body").css({"background-image": "url('https://api.ltsji.top/randbg.php')", "background-attachment": "fixed", "background-size": "cover"});
             }
+        }
+        $(document).ready(function() {
+            changeBackground();
+            $(window).on('resize',function(){
+                changeBackground();
+            })
         })
     </script>
 <% } else {%>
