--- a/themes/yelee/source/css/_partial/main.styl
+++ b/themes/yelee/source/css/_partial/main.styl
@@ -65,7 +65,7 @@
         position:absolute;
         right:0;
         min-height:100%;
-        background: mid-col-color;
+        // background: mid-col-color;
         left: left-col-width;
         width: auto;
     }
@@ -87,7 +87,7 @@
 #header{
     width: 100%;
     a {
-        color: #696969;
+        color: #222;
         &:hover {
             color: #B0A0AA;
         }
