feat: change blog color style

--- a/themes/yelee/source/css/_partial/footer.styl
+++ b/themes/yelee/source/css/_partial/footer.styl
@@ -23,9 +23,9 @@
         font-size .88rem
         .fa
             padding-right .25em
-            color gray
+            // color gray
         #site-visit:hover
         ,#page-visit:hover
             color black
             .fa
-                color #333
+                color gray
