--- a/themes/yelee/source/css/_partial/main.styl
+++ b/themes/yelee/source/css/_partial/main.styl
@@ -144,7 +144,7 @@
     }
     .header-subtitle{
         text-align: center;
-        color:#999;
+        // color:#999;
         font-size: (14/16)rem;
         line-height: 1.75;
         overflow: hidden;
@@ -283,7 +283,7 @@
     font-family: inherit;
     font-size: .9em;
     font-weight: bold;
-    color: #258fb8
+    color: color-link
     background: none;
     -webkit-appearance: none;
     &:hover {
@@ -313,9 +313,7 @@
     li {
         margin: .4em 0 .1em .7em;
         a {
-            color: gray;
             &:hover {
-                color: ;
                 text-decoration: none;
             }
         }
