--- a/themes/yelee/source/css/_variables.styl
+++ b/themes/yelee/source/css/_variables.styl
@@ -3,10 +3,10 @@ support-for-ie = false
 vendor-prefixes = webkit moz ms official
 
 // Colors
-color-default = #555
+color-default = #222
 color-grey = #999
 color-border = #ddd
-color-link = #258fb8
+color-link = #006699
 color-background = #eee
 color-sidebar-text = #777
 color-widget-background = #ddd
@@ -65,8 +65,8 @@ left-col-width = hexo-config("left_col_width")px
 // Background Color
 left-col-color = rgba(255,255,255,.5)
 mid-col-color = rgba(255,255,255,.8)
-article-color = rgba(255,255,255,.5)
-archives-color = rgba(255,255,255,.4)
+article-color = rgba(255,255,255,.7)
+archives-color = rgba(255,255,255,.7)
 
 root-url = hexo-config("root_url")
 i-opacity = .75
