--- a/themes/yelee/source/css/_partial/article.styl
+++ b/themes/yelee/source/css/_partial/article.styl
@@ -104,7 +104,7 @@
 }
 
 .article-title {
-  color: #222;;
+  color: color-link;
   margin-left: 0px;
   font-weight: 400;
   line-height: 1.3;
@@ -248,7 +248,7 @@
     text-align right
     z-index 1
     time
-        color #aaa
+        color #222
         float right
         &:before
             margin-top 0px
@@ -386,11 +386,11 @@ li:hover {
     span {
         display: inline-block;
         width: 5.8em;
-        color: #B5B5B5;
+        // color: #B5B5B5;
         font-weight: bold;
     }
     a {
-        color: gray;
+        // color: gray;
         &:hover {
             color: #a3d2a3;
             text-decoration: underline;
