--- a/themes/yelee/source/css/_partial/mobile.styl
+++ b/themes/yelee/source/css/_partial/mobile.styl
@@ -217,7 +217,7 @@
     background: rgba(255, 255, 255, .7);
     font-size: 1em;
     font-weight: bold;
-    color: #258fb8;
+    color: color-link
     box-shadow: 0px 0px 4px rgba(0,0,0,0.3);  
     &:hover {
         box-shadow: 0px 0px 10px rgba(0,0,0,0.5);    
@@ -252,7 +252,7 @@
     .toc-title {
         display: none;
         padding: .6em;
-        color: #258fb8;
+        color: color-link;
     }
     .toc {
         padding: 0.5em;
