feat: fix backgroud image and push to github

--- a/themes/yelee/layout/_partial/background.ejs
+++ b/themes/yelee/layout/_partial/background.ejs
@@ -10,7 +10,7 @@
             else {
                 // var backgroundnum = <%= theme.background_image %>;
                 // var backgroundimg = "url(<%- theme.root_url %>/background/bg-x.jpg)".replace(/x/gi, Math.ceil(Math.random() * backgroundnum));
-                $("body").css({"background-image": "url('https://api.ltsji.top/randbg.php')", "background-attachment": "fixed", "background-size": "cover"});
+                $("body").css({"background-image": "url('http://acg.bakayun.cn/randbg.php')", "background-attachment": "fixed", "background-size": "cover"});
             }
         }
         $(document).ready(function() {
