feat: remove cartoon background

--- a/themes/yelee/layout/_partial/after-footer.ejs
+++ b/themes/yelee/layout/_partial/after-footer.ejs
@@ -11,4 +11,4 @@
     }) %>
 <%- partial('tab-title-change') %>
 <script defer data-main="<%-config.root%>js/main.js" src="<%- theme.CDN.require %>"></script>
-<script async src="https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
