--- a/themes/yelee/layout/_partial/footer.ejs
+++ b/themes/yelee/layout/_partial/footer.ejs
@@ -4,7 +4,7 @@
             <div class="footer-left">
                 <i class="fa fa-copyright"></i> 
                 <% if (theme.since && !isNaN(theme.since) && theme.since < date(new Date(), 'YYYY')) { %><%- theme.since%>-<% } %><%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>
-                <% if (theme.ICP.on) {%> <a href="http://www.miitbeian.gov.cn/" target="_blank"><%= theme.ICP.value %></a> <% } %>
+                <% if (theme.ICP.on) {%> <a href="http://www.beian.miit.gov.cn/" target="_blank"><%= theme.ICP.value %></a> <% } %>
             </div>
             <div class="footer-right">
                 <a href="http://hexo.io/" target="_blank" title="<%= __('tooltip.Hexo') %>">Hexo</a>  Theme <a href="https://github.com/MOxFIVE/hexo-theme-yelee" target="_blank" title="<%= __('tooltip.Yelee') %>  v<%= theme.Yelee %>">Yelee</a> by MOxFIVE <i class="fa fa-heart animated infinite pulse"></i>
